@@ -1,3 +1,8 @@
+2006-05-08  David Reveman  <davidr@novell.com>
+
+	* plugins/switcher.c: Allow switcher to be initiated with prev
+	bindings. (Quinn Storm)
+
 2006-05-07  David Reveman  <davidr@novell.com>
 
 	* plugins/compiz.schemas.in.in: Regen.
